BuildHughes/translation-tool/inputs/source_meta/objects/Partner_PDV__c.object
<CustomObject>
    <fields>
        <fullName>PDV_Address__c</fullName>
        <label>PDV Address</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PDV_Type__c</fullName>
        <label>PDV Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SHOWROOM</fullName>
                </value>
                <value>
                    <fullName>SUB</fullName>
                </value>
                <value>
                    <fullName>MOVIL</fullName>
                </value>
                <value>
                    <fullName>CALL CENTER</fullName>
                </value>
                <value>
                    <fullName>ADM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner PDVs</relationshipLabel>
        <relationshipName>Partner_PDVs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Partner PDV</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Partner PDV Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner PDVs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>